CLOSED FIXED 37152
[Qt] Rendering artifacts on Qt plugins when scrolling the page
https://bugs.webkit.org/show_bug.cgi?id=37152
Summary [Qt] Rendering artifacts on Qt plugins when scrolling the page
qt-info
Reported 2010-04-06 07:17:56 PDT
When having plugins on a QWebView, scrolling the view does not update the painting of the plugins correctly. The plugin rect leaves vertical lines when scrolling back up, where the plugin was previously visible.
Attachments
archive containing entire project (560.71 KB, application/octet-stream)
2010-04-06 08:31 PDT, qt-info
no flags
Always repaint QtPluginWidgets on geometry change (962 bytes, patch)
2010-04-06 17:18 PDT, Andreas Kling
hausmann: review-
hausmann: commit-queue-
Patch with better ChangeLog (1.14 KB, patch)
2010-04-13 16:03 PDT, Andreas Kling
no flags
qt-info
Comment 1 2010-04-06 08:31:51 PDT
Created attachment 52640 [details] archive containing entire project To reproduce the issue, drag the html file from the debug directory onto the view. Scroll the page up and down.
Andreas Kling
Comment 2 2010-04-06 17:18:25 PDT
Created attachment 52685 [details] Always repaint QtPluginWidgets on geometry change
Andreas Kling
Comment 3 2010-04-06 17:27:09 PDT
This is a regression caused by https://bugs.webkit.org/show_bug.cgi?id=33373 (The previous behavior was to repaint the entire viewport when scrolling a page with plugins.)
Simon Hausmann
Comment 4 2010-04-09 14:22:20 PDT
Comment on attachment 52685 [details] Always repaint QtPluginWidgets on geometry change > diff --git a/WebKit/qt/ChangeLog b/WebKit/qt/ChangeLog > index 5d014d2..09a4573 100644 > --- a/WebKit/qt/ChangeLog > +++ b/WebKit/qt/ChangeLog > @@ -1,3 +1,12 @@ > +2010-04-06 Andreas Kling <andreas.kling@nokia.com> > + > + Reviewed by NOBODY (OOPS!). > + > + Always repaint QtPluginWidgets when their geometry changes. > + https://bugs.webkit.org/show_bug.cgi?id=37152 > + > + * WebCoreSupport/FrameLoaderClientQt.cpp: Patch looks good to me, but please include the bug title in the ChangeLog, so that it's clear from the ChangeLog what higher level issue is fixed. The usual format is [Qt] Baz isn't repainted correctly after Foo https://bugs.webkit.org/... Because Foo is too small we also need to repaint Baz. ....
Kenneth Rohde Christiansen
Comment 5 2010-04-09 15:01:13 PDT
> The usual format is > > [Qt] Baz isn't repainted correctly after Foo > https://bugs.webkit.org/... You can also use the "http://webkit.org/b/BUGNUMBER" shorthand.
Benjamin Poulain
Comment 6 2010-04-09 15:17:00 PDT
> Patch looks good to me, but please include the bug title in the ChangeLog, so > that > it's clear from the ChangeLog what higher level issue is fixed. prepare-changelog --bug 37152 can also do the trick :)
Andreas Kling
Comment 7 2010-04-13 16:03:23 PDT
Created attachment 53293 [details] Patch with better ChangeLog
WebKit Commit Bot
Comment 8 2010-04-14 18:06:54 PDT
Comment on attachment 53293 [details] Patch with better ChangeLog Clearing flags on attachment: 53293 Committed r57623: <http://trac.webkit.org/changeset/57623>
WebKit Commit Bot
Comment 9 2010-04-14 18:07:00 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 10 2010-04-15 14:57:10 PDT
Revision r57623 cherry-picked into qtwebkit-2.0 with commit 213eb62e284938447916392220e645631fb9cf3d
Note You need to log in before you can comment on or make changes to this bug.