2010-04-14  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Rendering artifacts on Qt plugins when scrolling the page
        https://bugs.webkit.org/show_bug.cgi?id=37152

        Because we no longer repaint the entire viewport on scroll,
        we must trigger a repaint of QtPluginWidgets when their geometry changes.

        * WebCoreSupport/FrameLoaderClientQt.cpp:

Canonical link: https://commits.webkit.org/48910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57623 268f45cc-cd09-0410-ab3c-d52691b4dbfc