WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp
@@ -1211,6 +1211,8 @@ public:
         platformWidget()->setMask(clipRegion);
 
         handleVisibility();
+
+        platformWidget()->update();
     }
 
     virtual void show()
